<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/instractions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level1"
            android:textSize="50dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="5dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <EditText
            android:id="@+id/input"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_centerInParent="true"
            android:textSize="30dp"
            android:inputType="number"
            android:hint="@string/number"/>

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/counter"
            android:textSize="30dp"
            android:inputType="number"
            android:text=""
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/msgTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startMsg"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/guess"
            android:textColor="@android:color/darker_gray"
            android:textSize="25dp"
            android:textAlignment="center"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>